src/index.css
/*
=============== 
Variables
===============
*/

:root {
  --custom-prime-color: rgb(90, 90, 245);
  --custom-secondary-color: rgb(40, 42, 57);
  --custom-tertiary-color: rgb(245, 245, 245);

  --custom-border-color-lighter: rgb(221, 219, 219);
  --custom-border-color-light: rgb(180, 180, 180);
  --custom-border-color: rgb(149, 148, 155);
  --custom-border-color-dark: rgb(130, 130, 130);
}

/* 
===============
Fonts
=============== 

*/

/*
The section is covered by the following licence. 
The MIT License (MIT)
Copyright (c) 2016 Mario Ranftl | majodev and "The Google Webfonts Helper" Project Contributors
https://github.com/majodev/google-webfonts-helper
https://google-webfonts-helper.herokuapp.com/fonts
*/

/* roboto-300 - latin */
@font-face {
  font-family: 'Roboto';
  font-style: normal;
  font-weight: 300;
  src: url('./fonts/roboto-v27-latin-300.eot');
  /* IE9 Compat Modes */
  src: local(''),
    url('./fonts/roboto-v27-latin-300.eot?#iefix') format('embedded-opentype'),
    /* IE6-IE8 */
    url('./fonts/roboto-v27-latin-300.woff2') format('woff2'),
    /* Super Modern Browsers */
    url('./fonts/roboto-v27-latin-300.woff') format('woff'),
    /* Modern Browsers */
    url('./fonts/roboto-v27-latin-300.ttf') format('truetype'),
    /* Safari, Android, iOS */
    url('./fonts/roboto-v27-latin-300.svg#Roboto') format('svg');
  /* Legacy iOS */
}

/* roboto-regular - latin */
@font-face {
  font-family: 'Roboto';
  font-style: normal;
  font-weight: 400;
  src: url('./fonts/roboto-v27-latin-regular.eot');
  /* IE9 Compat Modes */
  src: local(''),
    url('./fonts/roboto-v27-latin-regular.eot?#iefix') format('embedded-opentype'),
    /* IE6-IE8 */
    url('./fonts/roboto-v27-latin-regular.woff2') format('woff2'),
    /* Super Modern Browsers */
    url('./fonts/roboto-v27-latin-regular.woff') format('woff'),
    /* Modern Browsers */
    url('./fonts/roboto-v27-latin-regular.ttf') format('truetype'),
    /* Safari, Android, iOS */
    url('./fonts/roboto-v27-latin-regular.svg#Roboto') format('svg');
  /* Legacy iOS */
}

/* roboto-500 - latin */
@font-face {
  font-family: 'Roboto';
  font-style: normal;
  font-weight: 500;
  src: url('./fonts/roboto-v27-latin-500.eot');
  /* IE9 Compat Modes */
  src: local(''),
    url('./fonts/roboto-v27-latin-500.eot?#iefix') format('embedded-opentype'),
    /* IE6-IE8 */
    url('./fonts/roboto-v27-latin-500.woff2') format('woff2'),
    /* Super Modern Browsers */
    url('./fonts/roboto-v27-latin-500.woff') format('woff'),
    /* Modern Browsers */
    url('./fonts/roboto-v27-latin-500.ttf') format('truetype'),
    /* Safari, Android, iOS */
    url('./fonts/roboto-v27-latin-500.svg#Roboto') format('svg');
  /* Legacy iOS */
}

/* roboto-700 - latin */
@font-face {
  font-family: 'Roboto';
  font-style: normal;
  font-weight: 700;
  src: url('./fonts/roboto-v27-latin-700.eot');
  /* IE9 Compat Modes */
  src: local(''),
    url('./fonts/roboto-v27-latin-700.eot?#iefix') format('embedded-opentype'),
    /* IE6-IE8 */
    url('./fonts/roboto-v27-latin-700.woff2') format('woff2'),
    /* Super Modern Browsers */
    url('./fonts/roboto-v27-latin-700.woff') format('woff'),
    /* Modern Browsers */
    url('./fonts/roboto-v27-latin-700.ttf') format('truetype'),
    /* Safari, Android, iOS */
    url('./fonts/roboto-v27-latin-700.svg#Roboto') format('svg');
  /* Legacy iOS */
}

/*
=============== 
Global Styles
===============
*/

*,
::after,
::before {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

html,
body {
  width: 100vw;
  max-width: 100%;
  overflow-wrap: break-word;
  overflow-x: hidden;
  -webkit-font-smoothing: antialiased;
}

body {
  margin: 0;
  font-family: 'Roboto', 'Helvetica', 'Arial';
  line-height: 1.5;
  /* background-color: rgb(227, 233, 245); */
  background-color: var(--custom-tertiary-color);
  /* //!Remove before official Release just makes development easier at night*/
  /* background-color: rgb(128, 127, 134);  */
  /*possible darkmode background-color: rgb(25, 27, 37);  */
  background-color: whitesmoke;
  color: black;

}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
    monospace;
}

#root {
  display: flex;
  flex-direction: row;
  position: relative;
  width: 100%;
  max-height: 100vh;
  overflow: hidden;
}

main {
  width: 100%;
  padding: 20px 8px 0 20px;
  min-height: 100vh;
  overflow-y: scroll;
  overflow-x: visible;
}

h1 {
  line-height: 1;
  text-transform: capitalize;
  font-weight: 300;
  font-size: 36px;
  display: inline;
  text-align: center;
}

h2 {
  font-size: 1.42rem;
}

h3 {
  font-size: 1.4rem;
  font-weight: 500;
  letter-spacing: 0.02em;
}

h2 {
  line-height: 1.3;
}

h3 {
  line-height: 1.1;
}

p,
li {
  font-size: 18px;
}

label,
input {
  font-size: 18px;
}

/* Remove chrome default touch color */
div,
input,
label,
textarea,
button,
select,
a {
  -webkit-tap-highlight-color: transparent;
}

/* Custom Scrollbar */
::-webkit-scrollbar {
  width: 12px;
}

::-webkit-scrollbar-thumb {
  background-color: rgb(204, 204, 204);
  border: 4px solid rgba(0, 0, 0, 0);
  background-clip: padding-box;
  border-radius: 9999px;
  margin-bottom: 500px;
}

/* Firefox Scrollbar */
* {
  scrollbar-width: thin;
  scrollbar-color: rgb(194, 194, 194) rgba(2, 34, 46, 0);
}

/* Heading with underline */
.main-heading-wrapper,
.module-heading-wrapper,
.question-heading-wrapper {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: fit-content;
  margin: 0 auto;
}

.heading-underline {
  margin-top: 5px;
  height: 3px;
  border-radius: 100vh;
  width: 80%;
  background-color: var(--custom-prime-color);
  animation: underline-in .3s ease-in-out 0s 1;
}

/* Animation */
@keyframes underline-in {
  0% {
    width: 0%;
  }

  100% {
    width: 80%;
  }

}

/* 
===============
Mobile CSS
=============== 
*/

@media only screen and (max-width: 650px) {
  #root {
    flex-direction: column;
  }

  h2 {
    font-size: 1.5rem;
  }

  h3 {
    font-size: 1.3rem;
  }

  p {
    font-size: 18px;
  }

  main {
    margin-top: 46px;
    margin-bottom: 0;
    padding: 15px 2px 5px 10px;
    min-height: auto;
  }

  ::-webkit-scrollbar {
    width: 10px;
  }

  ::-webkit-scrollbar-thumb {
    background-color: rgb(204, 204, 204);
    border: 4px solid rgba(0, 0, 0, 0);
    background-clip: padding-box;
    border-radius: 9999px;
    margin-bottom: 500px;
  }
}

/* On mobile firefox the scrollbar is part of the html viewport. In other browsers it is not */
@media(min--moz-device-pixel-ratio:0) and (max-width: 650px) {
  main {
    padding: 15px 10px 50px 10px;
  }

  html,
  body {
    max-width: 100vw;
    overflow-x: hidden;
  }
}

